# ML_CFD

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LLE.ipynb  README.md  logger_setup.py  pyproject.toml
AE/: AE_spatial.ipynb
ISOMAP/: Isomap.ipynb
KPCA/: KPCA.ipynb
LLE/: LLE.ipynb
PCA_SVD/: PCA_SDV.ipynb
PCA_sdv/: PCA_sdv.ipynb
PCA_sklearn/: PCA_sklearn.ipynb
T_AE/: AE_temporal.ipynb
data/: README.md  readme.txt
dataprocess/: LEGACY.md  dataprocess.py  domain_crop.py
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
modV/: readme.txt
notebooks/: 2026-04-23_pipeline_exploration_template.ipynb  README.md
notebooks/legacy/: AE_spatial.ipynb  AE_temporal.ipynb  Isomap.ipynb  KPCA.ipynb  LLE.ipynb  PCA_SDV.ipynb  PCA_sklearn.ipynb  README.md
runs/: README.md
runs/examples/: ae_spatial_re50_minimal.example.yaml  kpca_re100.example.yaml  pca_sklearn_re50.example.yaml  pca_svd_re50.example.yaml
scripts/: patch_thesis_notebooks.py
src/mlcfd/: logging_config.py  orientation.py  thesis.py
src/mlcfd/cli/: main.py
src/mlcfd/config/: schemas.py
src/mlcfd/io/: storage.py
src/mlcfd/mesh/: mesh.py
src/mlcfd/models/: autoencoder.py  base.py  factory.py  isomap.py  kpca.py  lle.py  manifold_inverse.py  pca_sklearn.py  pca_svd.py  registry.py
src/mlcfd/pipeline/: results.py  runner.py
tests/: conftest.py  test_orientation_parity.py
tests/models/: test_modes.py  test_reconstruction_sweep.py  test_registry.py
tests/pipeline/: test_results.py  test_runner_modes.py
tests/preprocessing/: test_pipeline.py
(+2 files in other folders)
