[project]
name = "mlcfd"
version = "0.1.0"
description = "Dimensionality reduction and ML workflows for CFD snapshot data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Martin Madrid" }]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
    "scikit-learn>=1.3,<2",
    "torch>=2.0,<3",
    "pydantic>=2.5,<3",
    "click>=8.1,<9",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.13",
    "pre-commit==4.0.1",
    "nbstripout==0.8.1",
    "ipykernel>=6.29,<7",
]

[project.scripts]
mlcfd = "mlcfd.cli.main:main"

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlcfd"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
# Lint/format only the installed package (not scripts/, notebooks/, etc.).
include = ["src/**/*.py", "src/**/*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
